gitops/manifests/soft-serve/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  creationTimestamp: null
  namespace: soft-serve
  labels:
    io.kompose.service: soft-serve
  name: soft-serve
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: soft-serve
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      creationTimestamp: null
      labels:
        io.kompose.network/soft-serve-default: "true"
        io.kompose.service: soft-serve
        app.kubernetes.io/name: soft-serve
    spec:
      containers:
        - image: charmcli/soft-serve:latest
          name: soft-serve
          ports:
            - containerPort: 23231
              hostPort: 23231
              protocol: TCP
            - containerPort: 23232
              hostPort: 23232
              protocol: TCP
            - containerPort: 23233
              hostPort: 23233
              protocol: TCP
            - containerPort: 9418
              hostPort: 9418
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /soft-serve
              name: soft-serve-claim0
            - mountPath: /soft-serve/config.yaml
              name: soft-serve-config
              subPath: config.yaml
      restartPolicy: Always
      volumes:
        - name: soft-serve-claim0
          persistentVolumeClaim:
            claimName: soft-serve-claim0
        - name: soft-serve-config
          configMap:
            name: soft-serve-config
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: "192.168.86.220"
  creationTimestamp: null
  namespace: soft-serve
  labels:
    io.kompose.service: soft-serve
  name: soft-serve
spec:
  ports:
    - name: "ssh-server"
      port: 22
      targetPort: 23231
    - name: "http-server"
      port: 23232
      targetPort: 23232
    - name: "stats-server"
      port: 23233
      targetPort: 23233
    - name: "git-daemon"
      port: 9418
      targetPort: 9418
  selector:
    io.kompose.service: soft-serve
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: soft-serve-ingress
  namespace: soft-serve
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`soft-serve.local.timmybtech.com`)
      kind: Rule
      services:
        - name: soft-serve
          port: 22
  tls:
    secretName: local-timmybtech-com-tls
